docs/core/v0.20/_sources/reference/tmlt/core/utils/grouped_dataframe/index.rst.txt



************************
grouped_dataframe
************************

.. py:module:: tmlt.core.utils.grouped_dataframe

.. autoapi-nested-parse::

   Grouped DataFrame aware of group keys when performing aggregations.











Classes
=======

.. list-table::

   * - :class:`.GroupedDataFrame`
     - Grouped DataFrame implementation supporting explicit group keys.

   
.. py:class:: GroupedDataFrame(dataframe, group_keys)

   Grouped DataFrame implementation supporting explicit group keys.

   A GroupedDataFrame object encapsulates the spark DataFrame to be grouped by as well
   as the group keys. The output of an aggregation on a GroupedDataFrame object is
   guaranteed to have exactly one row for each group key, unless there are no group
   keys, in which case it will have a single row.






   .. py:property:: dataframe
      :type: pyspark.sql.DataFrame


      Returns the DataFrame being grouped.

   .. py:property:: group_keys
      :type: Optional[pyspark.sql.DataFrame]


      Returns DataFrame containing group keys. None means total aggregation.

   .. py:property:: groupby_columns
      :type: List[str]


      Returns the columns being grouped on.


   .. automethod:: __init__
   .. py:method:: select(columns)

      Returns a new GroupedDataFrame object with specified subset of columns.

      .. note:: ``columns`` must contain the groupby columns.

      :param columns: List of column names to keep. This must include the groupby
                      columns.


   .. py:method:: agg(func, fill_value)

      Applies given spark function (column expression) to each group.

      The output DataFrame is guaranteed to have exactly one row for each group
      key. For group keys corresponding to empty groups, the output column will
      contain the supplied ``fill_value``. The output DataFrame is also sorted by
      the groupby columns.

      :param func: Function to apply to each group.
      :param fill_value: Output value for empty groups.


   .. py:method:: apply_in_pandas(aggregation_function, aggregation_output_schema)

      Returns DataFrame obtained by applying aggregation function to each group.

      Each group is passed to the ``aggregation_function`` as a pandas DataFrame
      and the returned pandas DataFrames are stacked into a single spark DataFrame.

      The output DataFrame is guaranteed to have exactly one row for each group
      key. For group keys corresponding to empty groups, the aggregation function
      is applied to an empty pandas DataFrame with the expected schema. The output
      DataFrame is also sorted by the groupby columns.

      :param aggregation_function: Aggregation function to be applied to each group.
      :param aggregation_output_schema: Expected spark schema for the output of the
                                        aggregation function.


   .. py:method:: get_groups()

      Returns the groups as dictionary of DataFrames.






